# Vell

./: .gitignore  07_fmt.txt  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deno.json  package-lock.json  package.json  task.md
.github/workflows/: publish-vscode.yml
crates/vell-cli/: Cargo.toml
crates/vell-cli/src/: lib.rs  main.rs  watch.rs
crates/vell-core/: Cargo.toml
crates/vell-core/src/: ast.rs  bibliography.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/vell-core/src/tests/: mod.rs
crates/vell-core/src/tests/fixtures/: admonition.json  admonition.vl  block_directive.json  block_directive.vl  classic_table.json  classic_table.vl  code_blocks.json  code_blocks_no_lang.json  code_blocks_no_lang.vl  def_list.json  def_list.vl  directives.json  directives.vl  empty_directive.json  empty_directive.vl  err_bad_indent.json  err_bad_indent.vl  err_bad_math_block.json  err_bad_math_block.vl  err_bad_prop_value.json  err_bad_prop_value.vl  err_invalid_indent.json  err_invalid_indent.vl  err_malformed_directive.json  err_malformed_directive.vl  err_malformed_table_grid.json  err_malformed_table_grid.vl  err_malformed_table_pipe.json  err_malformed_table_pipe.vl  err_unclosed_bold.json  err_unclosed_bold.vl  err_unclosed_code.json  err_unclosed_code.vl  err_unclosed_directive.json  err_unclosed_directive.vl  err_unclosed_fence.json  err_unclosed_fence.vl  err_unclosed_image.json  err_unclosed_image.vl  err_unclosed_italic.json  (+47 more)
crates/vell-core/tests/: gen_fixtures.rs
crates/vell-fmt/: Cargo.toml
crates/vell-lsp/: Cargo.toml
crates/vell-lsp/src/: main.rs
crates/vell-wasm/: Cargo.toml
crates/vell-wasm/src/: lib.rs
docs/: .atlas-analysis.json  ast-reference.md  docs.json  extension-authoring.md  index.mdx  installation.mdx  introduction.mdx  language-reference.md  quickstart.mdx  reliability.mdx  renderer-guide.md
docs/agent/: architecture.mdx  design.mdx  overview.mdx
docs/api/: ast-nodes.mdx  ast-overview.mdx  ast-schema.mdx  renderer-html.mdx  renderer-pdf.mdx  vell-js.mdx  wasm-bindings.mdx
docs/extensions/: authoring.mdx  built-in.mdx  (+1 more)
spec/: ast-schema.json  grammar.peg
(+31 files in other folders)
