[package]
name = "vell-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
http = ["dep:ureq"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-normalization = "0.1"
ureq = { version = "2", optional = true }
