[package]
name = "vell-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
vell-core = { path = "../vell-core" }
vell-fmt = { path = "../vell-fmt" }
